2011-06-06  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dan Bernstein.

        Incorrect rounding of color values during transitions
        https://bugs.webkit.org/show_bug.cgi?id=62141

        When blending integers, round to the nearest integer, instead of always rounding down.

        Test: transitions/color-transition-rounding.html

        * page/animation/AnimationBase.cpp:
        (WebCore::blendFunc):

Canonical link: https://commits.webkit.org/77655@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88214 268f45cc-cd09-0410-ab3c-d52691b4dbfc